# notepad

./: README.md
vscodetest/notepad/: CMakeLists.txt  build_and_deploy.bat
vscodetest/notepad/src/: main.cpp  mainwindow.cpp  mainwindow.h  notepaditem.cpp  notepaditem.h
